- Added shared preferences to save the set location and add the car marker icon again on the map when the app is closed (destroyed) and reopened. - Added custom icons for ic_launcher types in mipmap - Cleaned up some code and added comments

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        // If you're using a version of Gradle lower than 4.1, you must use:
         maven {
             url "https://maven.google.com"
         }
