--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.android.gms:play-services-maps:9.8.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    // Google play services
+    compile 'com.google.android.gms:play-services-maps:9.8.0'
 }
